--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -104,41 +104,83 @@ body {
   align-items: center;
 }
 
+/* Venue Page Container styling */
+.venue-page h2 {
+  font-size: 1.5em;
+  margin: 16px;
+}
+
+.venue-page a {
+  float: right;
+  margin: 16px;
+  color: #b31b3e;
+  text-decoration: none;
+}
+
+.venue-section {
+  padding: 16px;
+}
+
+.venue-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.venue-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #333;
+  margin: 0;
+}
+
+.view-more {
+  color: #888;
+  font-size: 0.9em;
+  text-decoration: none;
+  font-weight: normal;
+}
+
 /* Venue Card Container styling */
 .venue-card-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 16px;
-  padding: 16px;
+  padding: 0px;
 }
 
 .venue-card {
   background-color: #b31b3e;
-  border-radius: 20px;
-  overflow: hidden;
   color: white;
-  text-align: center; /* Center text horizontally */
-}
-
-.venue-card ion-card-content {
+  border-radius: 15px;
+  overflow: hidden;
   display: flex;
-  justify-content: center; 
-  align-items: center;
-  height: 100px; 
-  font-size: 1.2em;
-  font-weight: bold;
+  flex-direction: column;
+  height: 350px;
 }
 
 .venue-card img {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .venue-card ion-card-content {
-  color: white;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: left;
+}
+
+.venue-card h3 {
+  font-size: 1.2em;
+  margin: 8px 0;
+}
+
+.venue-card p {
+  font-size: 0.9em;
+  margin: 4px 0;
 }
 
 /* Gaya untuk Hero Section */
