--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -14,30 +14,27 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-ion-content {
-  --padding: 0px;
-}
-
 .logo {
   font-size: 1.8em;
   font-weight: bold;
   color: #b31b3e;
 }
 
-.logo .highlight {
-  color: #a01838; /* Darker shade to emphasize */
-}
-
 .navbar {
   display: flex;
   gap: 20px;
+  align-items: center;
 }
 
 .nav-link {
   font-size: 1em;
   color: #b31b3e;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 300;
+  padding: 5px 10px; /* Adds padding for better spacing */
+  display: flex;
+  align-items: center; /* Centers text within each link */
+  line-height: 1; /* Ensures no extra vertical spacing */
 }
 
 .nav-link.active {
