--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -58,37 +58,62 @@ body {
   margin-bottom: 20px;
 }
 
-/* Custom Search Bar */
-.custom-searchbar {
-  --background: #fff;
-  --color: #b31b3e;
-  --border-radius: 30px;
-  --placeholder-color: #b31b3e;
-  --icon-color: #b31b3e;
-  width: 80%;
-  max-width: 500px;
-  margin: 0 auto;
-}
-
-.custom-searchbar .searchbar-input {
-  padding: 10px 20px;
-  font-size: 1em;
-}
-
-/* Adjustments for Search Icon */
-.custom-searchbar .searchbar-icon {
-  color: #b31b3e;
-}
-
-.custom-searchbar .searchbar-clear-icon {
-  display: none; /* Remove clear icon if not needed */
-}
-
 .search-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  gap: 0;
+  width: 80%;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.custom-input {
+  width: 100%;
+  height: 50px;
+  border: none;
+  border-radius: 30px 0 0 30px; /* Rounded left edges */
+  padding: 0 20px;
+  font-size: 1.1em;
+  background-color: #f3f3f3;
+  color: #b31b3e;
+  outline: none;
+}
+
+.custom-input::placeholder {
+  color: #b31b3e;
+}
+
+/* Search Button Styling */
+.search-button {
+  height: 50px;
+  width: 50px;
+  background-color: #f3f3f3;
+  border: none;
+  border-radius: 0 30px 30px 0; /* Rounded right edges */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.search-button:hover {
+  background-color: #e0e0e0;
+}
+
+.search-icon {
+  font-size: 1.2em;
+  color: #b31b3e;
+}
+
+.page-title h1 {
+  text-align: center;
+  font-size: 2em;
+  font-weight: bold;
+  text-decoration: underline;
+  margin-bottom: 20px;
+  color: #333;
 }
 
 /* Features section styling */
@@ -117,17 +142,6 @@ body {
 }
 
 /* Venue Page Container styling */
-.venue-page h2 {
-  font-size: 1.5em;
-  margin: 16px;
-}
-
-.venue-page a {
-  float: right;
-  margin: 16px;
-  color: #b31b3e;
-  text-decoration: none;
-}
 
 .venue-section {
   padding: 16px;
@@ -137,14 +151,14 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 16px;
+  margin: 0px 20px 0px 20px;
 }
 
 .venue-title {
   font-size: 1.5em;
   font-weight: bold;
   color: #333;
-  margin: 0;
+  text-decoration: underline;
 }
 
 .view-more {
@@ -222,18 +236,21 @@ body {
 
 /* Venue Card Button Styling */
 .order-button {
-  background-color: #ffffff; /* White background */
-  color: #b31b3e; /* Red text color */
-  border: 1px solid #b31b3e; /* Red border */
-  border-radius: 8px; /* Rounded corners */
+  align-self: flex-end;
+  background-color: #ffffff;
+  color: #b31b3e;
+  border: none;
+  border-radius: 8px;
   font-size: 0.9em;
-  font-weight: 700;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 6px 12px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .order-button:hover {
-  background-color: #f0f0f0; 
+  background-color: #f0f0f0;
 }
 
 
