--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,45 +1,45 @@
-
 .footer {
-  position: sticky;
-  bottom: 0;
   width: 100%;
-  height: 60px; /* Adjust based on the footer height */
   background-color: #f8f8f8;
-  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  padding: 15px;
-  z-index: 100;
   
 }
 
-.footer-toolbar {
-  background-color: white; 
+.footer .footer-title h2 {
+  font-weight: bold;
   color: #a0233a;
+  text-align: center;
+  margin-bottom: 20px;
+  
 }
 
 .contact-info {
   display: flex;
-  flex-direction: column;
-  align-items: left;
-  gap: 10px;
+  flex-direction: row; 
+  justify-content: center; 
+  gap: 20px; 
+  color: #a0233a;
+  
 }
 
 .contact-item {
   display: flex;
-  align-items: left;
-  gap: 10px;
+  align-items: center;
+  gap: 8px;
   color: #a0233a;
+  padding: 20px 0;
 }
 
-.footer-title h2 {
-  font-weight: bold;
-  color: #a0233a;
-  margin-bottom: 10px;
+.contact-item ion-icon {
+  font-size: 1.2rem; 
 }
+
 .footer-bottom-bar {
   height: 20px;
-  background-color: #a0233a; 
+  background-color: #a0233a;
+  width: 100%;
 }
+
+
 .main-content {
-  padding-bottom: 80px; /* Adjust based on footer height */
+  padding-bottom: 80px; 
 }
