feat(ui): add footer in venue page

--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -196,7 +196,7 @@ body {
 }
 
 .tag {
-  background-color: #e91e63;
+  background-color: #b31b3e;
   color: white;
   padding: 2px 8px;
   border-radius: 8px;
